--- a/boilerplate/public/css/layout.css
+++ b/boilerplate/public/css/layout.css
@@ -28,7 +28,7 @@ header {
 }
 
   .header-title {
-    width: 190px;
+    width: 230px;
   }
 
   .header-content {
@@ -84,6 +84,7 @@ header .title {
   background-color: #33373b;
   padding-top: 20px;
   width: 230px;
+
 }
   .left-menu label {
     font-family: 'Sinkin sans';
@@ -98,7 +99,22 @@ header .title {
     margin: 5px 0px;
     padding: 0;
     list-style: none;
+    max-height: 45vh;
+    overflow-y: auto;
+  }
 
+  .left-menu ::-webkit-scrollbar {
+      width: 10px;
+  }
+
+  .left-menu ::-webkit-scrollbar-track {
+      background: none;
+  }
+
+  .left-menu ::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      background-color: rgba(238,238,238,0.5);
+      border: 3px solid #33373b;
   }
 
   .left-menu ul li {
@@ -120,7 +136,8 @@ header .title {
 .content {
   -webkit-flex: 1;
           flex: 1;
-  overflow-y: scroll;
+  overflow-y: auto;
+  position: relative;
 }
 
 .box.white {
@@ -231,3 +248,83 @@ body {
   display: -webkit-flex;
   display: flex;
 }
+
+
+.servers-modal {
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  z-index: 50;
+  width: 30vw;
+  left: 0;
+  right: 0;
+  margin-left:  auto;
+  margin-right:  auto;
+}
+
+.servers-modal ul {
+  padding: 0;
+  margin: 0;
+  font-family: 'Sinkin sans';
+  list-style: none;
+  font-size: 11px;
+  box-shadow: 0px 3px 5px rgba(0,0,0, 0.1);
+}
+
+.servers-modal ul li {
+  padding: 8px 20px;
+  color: rgba(0,0,0,0.4);
+  border-bottom: 1px solid rgba(0,0,0, 0.1);
+  cursor: default;
+}
+
+.servers-modal ul li:hover {
+  color: #444;
+}
+
+.servers-modal ul li:last-child {
+  border: none;
+}
+
+.server-box .form {
+  font-family: 'Sinkin sans';
+  width: 300px;
+  background-color: #fff;
+  display: block;
+  margin: 0 auto;
+  padding: 10px;
+  position: relative;
+  box-sizing: border-box;
+}
+
+  .server-box {
+    margin-top: 60px;
+  }
+
+  .server-box .form label {
+    display: block;
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 10px;
+    margin-bottom: 4px;
+  }
+
+  .server-box .form input {
+    padding-left: 10px;
+    font-size: 12px;
+    display: block;
+    width: 100%;
+    height: 30px;
+    border: none;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+    background-color: rgba(0,0,0,0.02);
+  }
+
+  .server-box .form input:focus {
+    outline: none;
+  }
+
+  .server-box .form  button.confirm {
+    width: 100%;
+    box-sizing: border-box;
+  }
